fixed alignment, removed jquery

--- a/css/section-about.scss
+++ b/css/section-about.scss
@@ -9,7 +9,7 @@
   .block-wrapper{
      padding:10px;
      width: 255px;
-     margin: 15px 20px auto auto;
+     margin: 15px 7px 0 7px;
      .block-title{
          color: #333;
          font-size: 18px;
