--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,7 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -webkit-backface-visibility: hidden;
   -webkit-text-stroke: 0.5px rgba(0, 0, 0, 0.1);
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.05);
 }
 
 
